# ndsl-tinyml-2526

./: .gitignore  main.py  pyproject.toml
arduino-nano-33-ble-sense/: platformio.ini
arduino-nano-33-ble-sense/include/: model.h
arduino-nano-33-ble-sense/src/: Debounce.h  GyroService.cpp  GyroService.h  MotionService.cpp  MotionService.h  PhotoService.cpp  PhotoService.h  bctl.py  hex_data.txt  hex_reader.py  main.cpp  main_full.cpp.bak
backend/: ble_service.py  ble_test.py  download_data.py  main.py  pyproject.toml
backend/data/: history.json
backend/data/images/: labels.json
testing-framework/: README.md  package-lock.json  package.json
testing-framework/src/: App.vue
testing-framework/src/components/: Slideshow.vue  Statistics.vue
